--- a/cell_cycle.rmd
+++ b/cell_cycle.rmd
@@ -364,12 +364,11 @@ Because cytokinesis usually occurs in conjunction with mitosis, "mitosis" is oft
 
 ## Regulation of The Eukaryotic Cell Cycle
 
-Levels of the three major cyclin types oscillate during the cell cycle (top), providing the basis for oscillations in the cyclin–Cdk complexes that drive cell-cycle events (bottom). In general, Cdk levels are constant and in large excess over cyclin levels; thus, cyclin–Cdk complexes form in parallel with cyclin levels. The enzymatic activities of cyclin–Cdk complexes also tend to rise and fall in parallel with cyclin levels, although in some cases Cdk inhibitor proteins or phosphorylation introduce a delay between the formation and activation of cyclin–Cdk complexes. Formation of active G1/S–Cdk complexes commits the cell to a new division cycle at the Start checkpoint in late G1. G1/S–Cdks then activate the S–Cdk complexes that initiate DNA replication at the beginning of S phase. M–Cdk activation occurs after the completion of S phase, resulting in progression through the G2/M checkpoint and assembly of the mitotic spindle. APC activation then triggers sister-chromatid separation at the metaphase-to-anaphase transition. APC activity also causes the destruction of S and M cyclins and thus the inactivation of Cdks, which promotes the completion of mitosis and cytokinesis. APC activity is maintained in G1 until G1/S–Cdk activity rises again and commits the cell to the next cycle. This scheme serves only as a general guide and does not apply to all cell types.
 Regulation of the cell cycle involves processes crucial to the survival of a cell, including the detection and repair of genetic damage as well as the prevention of uncontrolled cell division. The molecular events that control the cell cycle are ordered and directional; that is, each process occurs in a sequential fashion and it is impossible to "reverse" the cycle.
 
 ### Role of cyclins and CDKs
 
-Two key classes of regulatory molecules, cyclins and cyclin-dependent kinases (CDKs), determine a cell's progress through the cell cycle. Leland H. Hartwell, R. Timothy Hunt, and Paul M. Nurse won the 2001 Nobel Prize in Physiology or Medicine for their discovery of these central molecules. Many of the genes encoding cyclins and CDKs are conserved among all eukaryotes, but in general more complex organisms have more elaborate cell cycle control systems that incorporate more individual components. Many of the relevant genes were first identified by studying yeast, especially Saccharomyces cerevisiae; genetic nomenclature in yeast dubs many of these genes cdc (for "cell division cycle") followed by an identifying number, e.g. cdc25 or cdc20.
+Two key classes of regulatory molecules, cyclins and cyclin-dependent kinases (CDKs), determine a cell's progress through the cell cycle. [Leland H. Hartwell](https://en.wikipedia.org/wiki/Leland_H._Hartwell), [R. Timothy Hunt](https://en.wikipedia.org/wiki/Tim_Hunt), and [Paul M. Nurse](https://en.wikipedia.org/wiki/Paul_Nurse) won the 2001 Nobel Prize in Physiology or Medicine for their discovery of these central molecules. Many of the genes encoding cyclins and CDKs are conserved among all eukaryotes, but in general more complex organisms have more elaborate cell cycle control systems that incorporate more individual components. Many of the relevant genes were first identified by studying yeast, especially Saccharomyces cerevisiae; genetic nomenclature in yeast dubs many of these genes cdc (for "cell division cycle") followed by an identifying number, e.g. cdc25 or cdc20.
 
 Cyclins form the regulatory subunits and CDKs the catalytic subunits of an activated heterodimer; cyclins have no catalytic activity and CDKs are inactive in the absence of a partner cyclin. When activated by a bound cyclin, CDKs perform a common biochemical reaction called phosphorylation that activates or inactivates target proteins to orchestrate coordinated entry into the next phase of the cell cycle. Different cyclin-CDK combinations determine the downstream proteins targeted. CDKs are constitutively expressed in cells whereas cyclins are synthesised at specific stages of the cell cycle, in response to various molecular signals.
 
